gap fix

--- a/src/app/components/ContentForm.module.css
+++ b/src/app/components/ContentForm.module.css
@@ -1,7 +1,7 @@
 .membership{
 	background:white;
 	border-radius:20px;
-	padding:20px;
+	padding:10px;
 }
 
 .membership p{
